added menu overlay for tweet adding

--- a/app/scripts/templates/admin.html
+++ b/app/scripts/templates/admin.html
@@ -1,3 +1,27 @@
+<top-menu menu="menuItems"
+          item-activate-callback="activateItem"
+          item-hover-callback="itemHoverHandler"
+          item-leave-callback="itemLeaveHandler"
+          root-item-click-callback="rootItemClickHandler"
+          root-item-hover-callback="rootItemHoverHandler"
+          root-item-leave-callback="rootItemLeaveHandler"></top-menu>
+
+<toolbar menu="toolbarItems"
+         item-activate-callback="activateItem"
+         item-hover-callback="itemHoverHandler"
+         item-leave-callback="itemLeaveHandler"
+         root-item-click-callback="rootItemClickHandler"
+         root-item-hover-callback="rootItemHoverHandler"
+         root-item-leave-callback="rootItemLeaveHandler"></toolbar>
+
+<panelbar menu="panelbarItems"
+          item-activate-callback="activateItem"
+          item-hover-callback="itemHoverHandler"
+          item-leave-callback="itemLeaveHandler"
+          root-item-click-callback="rootItemClickHandler"
+          root-item-hover-callback="rootItemHoverHandler"
+          root-item-leave-callback="rootItemLeaveHandler"></panelbar>
+
 <div class="admin-panel">
   <h1 class="admin-panel__title">Add a Tweet</h1>
 
