started working on an independent client

--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -42,7 +42,7 @@
       <div class="tweet__text" ng-bind-html="tweet.text"></div>
     </div>
 
-    <div class="l-block-small"
+    <div class="l-block-small tweet__preview-image-wrapper"
          ng-show="tweet.previewImageUrl">
       <img src="{{tweet.previewImageUrl}}"
            class="tweet__preview-image"/>
